--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+        <dependency>
+            <groupId>
+                org.springframework.boot
+            </groupId>
+            <artifactId>
+                spring-boot-starter-test
+            </artifactId>
+            <scope>
+                test
+            </scope>
+        </dependency>
 
         <!-- MySQL: https://www.mysql.com/ -->
         <dependency>
