--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,33 @@
             <version>3.5.11</version>
         </dependency>
 
+        <!-- Sa-Token: https://sa-token.cc/doc.html#/ -->
+        <dependency>
+            <!-- Sa-Token 整合依赖 -->
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot-starter</artifactId>
+            <version>1.42.0</version>
+        </dependency>
+        <dependency>
+            <!-- Sa-Token 整合 Redis -->
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-redis-template</artifactId>
+            <version>1.42.0</version>
+        </dependency>
+        <dependency>
+            <!-- Sa-Token 整合 Redis 时使用 jackson 序列化方式 -->
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-redis-jackson</artifactId>
+            <version>1.42.0</version>
+        </dependency>
+
+        <!-- sdk -->
+        <dependency>
+            <groupId>cn.com.edtechhub</groupId>
+            <artifactId>work-oapicli-sdk</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
