--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -39,8 +39,10 @@ server:
   address: 127.0.0.1
   ## 配置端口
   port: 8000
+  servlet:
+    context-path: /api # TODO: 后期去除...
   ## 配置超时
-  connection-timeout: 60000 # 设置连接超时时间为 60 秒
+#  connection-timeout: 60000 # 设置连接超时时间为 60 秒
 
 # 配置日志
 logging:
